objects/omnistudio__VlocityTrackingEntry__c.object
<CustomObject>
    <fields>
        <fullName>omnistudio__ContextId__c</fullName>
        <label>Context Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>omnistudio__CustomerInteractionToken__c</fullName>
        <label>Customer Interaction Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>omnistudio__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>omnistudio__Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>omnistudio__TrackingService__c</fullName>
        <label>TrackingService</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>omnistudio__VlocityInteractionToken__c</fullName>
        <label>Vlocity Interaction Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Tracking Entry</label>
    <listViews>
        <fullName>omnistudio__All</fullName>
        <columns>omnistudio__TrackingService__c</columns>
        <columns>NAME</columns>
        <columns>omnistudio__Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Tracking Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>